# rutasLogisticas

./: .dockerignore  .gitignore  BACKPORT-TEST.md  DOCKER.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.mysql.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  test-backport.txt  workflow-test.txt
.github/workflows/: auto-backport.yml
Frontend/: Dockerfile  README.md  angular.json  package-lock.json  package.json
Frontend/src/: main.ts
Frontend/src/app/: app.config.ts  app.routes.ts  app.ts
Frontend/src/app/guards/: auth.guard.ts
Frontend/src/app/pipes/: sanitize-url.pipe.ts
Frontend/src/app/services/: addresses.ts  api.ts  audit.ts  (+11 more)
app/: __init__.py  main.py
app/api/: __init__.py  dependencies.py
app/api/routes/: __init__.py  addresses.py  audit.py  audit_test.py  clients.py  clients_test.py  directions.py  directions_test.py  drivers.py  drivers_test.py  geocoding.py  geocoding_test.py  orders.py  orders_test.py  reports.py  reports_test.py  roles.py  roles_test.py  userses.py  userses_test.py  vehicles.py  vehicles_test.py
app/core/: __init__.py  base.py  config.py  database.py  security.py  security_test.py
app/models/: __init__.py  address.py  audit_log.py  base.py  client.py  driver.py  geocoding_result.py  order.py  permission.py  role.py  role_permission.py  users.py  vehicle.py
app/repositories/: __init__.py  address_repository.py  audit_repository.py  audit_repository_test.py  base.py  client_repository.py  client_repository_test.py  driver_repository.py  driver_repository_test.py  order_repository.py  order_repository_test.py  users_repository.py  users_repository_test.py  vehicle_repository.py  vehicle_repository_test.py
app/schemas/: __init__.py  address_schemas.py  audit_schemas.py  audit_schemas_test.py  base_schemas.py  client_schemas.py  client_schemas_test.py  directions_schemas.py  driver_schemas.py  driver_schemas_test.py  geocoding_schemas.py  order_schemas.py  order_schemas_test.py  role_schemas.py  role_schemas_test.py  users_schemas.py  users_schemas_test.py  vehicle_schemas.py  vehicle_schemas_test.py
app/services/: __init__.py  address_service.py  audit_service.py  audit_service_test.py  base.py  client_service.py  client_service_test.py  directions_service.py  directions_service_test.py  driver_service.py  driver_service_test.py  geocoding_service.py  geocoding_service_test.py  order_service.py  order_service_test.py  role_service.py  role_service_test.py  users_service.py  users_service_test.py  vehicle_service.py  vehicle_service_test.py
database/: add_security_columns.sql  configure_utf8.sql  fix_users_table.sql  fix_utf8.sql  init_mysql.sql  my.cnf
docs/: API.md  CONEXION_BACKEND.md  DEPLOYMENT.md  ERRORES_EDITOR.md  MYSQL_MIGRATION.md  README.md
frontend/: manage.py  requirements.txt
frontend/apps/: __init__.py
frontend/apps/core/: __init__.py
frontend/rutas_logisticas_frontend/: __init__.py  settings.py
migrations/: env.py
postman/: README.md  Rutas_Logisticas_API.postman_collection.json  Rutas_Logisticas_Environment.postman_environment.json
scripts/: setup.py
(+54 files in other folders)
